{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 23,
  "lineage": "1b078c32-03f0-d525-a7ab-f139ab9dc8c1",
  "resources": [
    {
      "module": "module.VPC",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403878313:vpc/vpc-0f41f2cc50b9d46d1",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0b2884caa5e0059eb",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0d91c6b3c0dad562a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f41f2cc50b9d46d1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f8c238e676b6287c",
            "owner_id": "390403878313"
          }
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002eda9f78110f807",
            "arn": "arn:aws:ec2:us-east-1:390403878313:elastic-ip/eipalloc-002eda9f78110f807",
            "domain": "vpc",
            "id": "eipalloc-002eda9f78110f807",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-232-44-240.compute-1.amazonaws.com",
            "public_ip": "3.232.44.240",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bbf4ca274dfc88d7",
            "arn": "arn:aws:ec2:us-east-1:390403878313:elastic-ip/eipalloc-0bbf4ca274dfc88d7",
            "domain": "vpc",
            "id": "eipalloc-0bbf4ca274dfc88d7",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-205-220-220.compute-1.amazonaws.com",
            "public_ip": "34.205.220.220",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403878313:internet-gateway/igw-0abe20a6c924ecff0",
            "id": "igw-0abe20a6c924ecff0",
            "owner_id": "390403878313",
            "tags": {
              "Name": "my-igw"
            },
            "tags_all": {
              "Name": "my-igw"
            },
            "vpc_id": "vpc-0d67bcdcf8bac5356"
          },
          "dependencies": [
            "module.VPC.aws_vpc.wl5vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002eda9f78110f807",
            "association_id": "eipassoc-0849526bcd8cba948",
            "connectivity_type": "public",
            "id": "nat-0c5cdd015bf6add19",
            "network_interface_id": "eni-07e52f6243868d041",
            "private_ip": "10.0.1.113",
            "public_ip": "3.232.44.240",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08fb03c46ee489c0f",
            "tags": {
              "Name": "nat-gateway_1"
            },
            "tags_all": {
              "Name": "nat-gateway_1"
            }
          },
          "dependencies": [
            "module.VPC.aws_eip.nat_eip_1",
            "module.VPC.aws_internet_gateway.my_igw",
            "module.VPC.aws_subnet.public_subnet_1",
            "module.VPC.aws_vpc.wl5vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bbf4ca274dfc88d7",
            "association_id": "eipassoc-0a28000ccb0b4e580",
            "connectivity_type": "public",
            "id": "nat-0d3ecd61a2de99252",
            "network_interface_id": "eni-064d0ea8b9e6ce3b1",
            "private_ip": "10.0.2.192",
            "public_ip": "34.205.220.220",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-079c9817d113cc8da",
            "tags": {
              "Name": "nat-gateway_2"
            },
            "tags_all": {
              "Name": "nat-gateway_2"
            }
          },
          "dependencies": [
            "module.VPC.aws_eip.nat_eip_2",
            "module.VPC.aws_internet_gateway.my_igw",
            "module.VPC.aws_subnet.public_subnet_2",
            "module.VPC.aws_vpc.wl5vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_vpc_to_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f8c238e676b6287c179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f8c238e676b6287c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-087845c954ab8c5fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.wl5vpc",
            "module.VPC.aws_vpc_peering_connection.vpc_peering",
            "module.VPC.data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_1_to_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f66bb242840e05373854007479",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f66bb242840e0537",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-087845c954ab8c5fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_eip.nat_eip_1",
            "module.VPC.aws_internet_gateway.my_igw",
            "module.VPC.aws_nat_gateway.nat_gateway_1",
            "module.VPC.aws_route_table.private_route_table_1",
            "module.VPC.aws_subnet.public_subnet_1",
            "module.VPC.aws_vpc.wl5vpc",
            "module.VPC.aws_vpc_peering_connection.vpc_peering",
            "module.VPC.data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_2_to_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d328f37f7024342a3854007479",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d328f37f7024342a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-087845c954ab8c5fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_eip.nat_eip_2",
            "module.VPC.aws_internet_gateway.my_igw",
            "module.VPC.aws_nat_gateway.nat_gateway_2",
            "module.VPC.aws_route_table.private_route_table_2",
            "module.VPC.aws_subnet.public_subnet_2",
            "module.VPC.aws_vpc.wl5vpc",
            "module.VPC.aws_vpc_peering_connection.vpc_peering",
            "module.VPC.data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_to_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08805e3fc9de11b9d3854007479",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08805e3fc9de11b9d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-087845c954ab8c5fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_internet_gateway.my_igw",
            "module.VPC.aws_route_table.my_public_route_table",
            "module.VPC.aws_vpc.wl5vpc",
            "module.VPC.aws_vpc_peering_connection.vpc_peering",
            "module.VPC.data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403878313:route-table/rtb-08805e3fc9de11b9d",
            "id": "rtb-08805e3fc9de11b9d",
            "owner_id": "390403878313",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0abe20a6c924ecff0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-public-route-table"
            },
            "tags_all": {
              "Name": "my-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d67bcdcf8bac5356"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_internet_gateway.my_igw",
            "module.VPC.aws_vpc.wl5vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403878313:route-table/rtb-0f66bb242840e0537",
            "id": "rtb-0f66bb242840e0537",
            "owner_id": "390403878313",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0c5cdd015bf6add19",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table_1"
            },
            "tags_all": {
              "Name": "private-route-table_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d67bcdcf8bac5356"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_eip.nat_eip_1",
            "module.VPC.aws_internet_gateway.my_igw",
            "module.VPC.aws_nat_gateway.nat_gateway_1",
            "module.VPC.aws_subnet.public_subnet_1",
            "module.VPC.aws_vpc.wl5vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403878313:route-table/rtb-0d328f37f7024342a",
            "id": "rtb-0d328f37f7024342a",
            "owner_id": "390403878313",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d3ecd61a2de99252",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table_2"
            },
            "tags_all": {
              "Name": "private-route-table_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d67bcdcf8bac5356"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_eip.nat_eip_2",
            "module.VPC.aws_internet_gateway.my_igw",
            "module.VPC.aws_nat_gateway.nat_gateway_2",
            "module.VPC.aws_subnet.public_subnet_2",
            "module.VPC.aws_vpc.wl5vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac4bcccf0e32dc91",
            "route_table_id": "rtb-0f66bb242840e0537",
            "subnet_id": "subnet-0574d576fc76f6202"
          },
          "dependencies": [
            "module.VPC.aws_eip.nat_eip_1",
            "module.VPC.aws_internet_gateway.my_igw",
            "module.VPC.aws_nat_gateway.nat_gateway_1",
            "module.VPC.aws_route_table.private_route_table_1",
            "module.VPC.aws_subnet.private_subnet_1",
            "module.VPC.aws_subnet.public_subnet_1",
            "module.VPC.aws_vpc.wl5vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04315893c093ef1e6",
            "route_table_id": "rtb-0d328f37f7024342a",
            "subnet_id": "subnet-062464eca15e177f9"
          },
          "dependencies": [
            "module.VPC.aws_eip.nat_eip_2",
            "module.VPC.aws_internet_gateway.my_igw",
            "module.VPC.aws_nat_gateway.nat_gateway_2",
            "module.VPC.aws_route_table.private_route_table_2",
            "module.VPC.aws_subnet.private_subnet_2",
            "module.VPC.aws_subnet.public_subnet_2",
            "module.VPC.aws_vpc.wl5vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a821ce06c9466fdc",
            "route_table_id": "rtb-08805e3fc9de11b9d",
            "subnet_id": "subnet-08fb03c46ee489c0f"
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.my_igw",
            "module.VPC.aws_route_table.my_public_route_table",
            "module.VPC.aws_subnet.public_subnet_1",
            "module.VPC.aws_vpc.wl5vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075f3e73c993a0aa0",
            "route_table_id": "rtb-08805e3fc9de11b9d",
            "subnet_id": "subnet-079c9817d113cc8da"
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.my_igw",
            "module.VPC.aws_route_table.my_public_route_table",
            "module.VPC.aws_subnet.public_subnet_2",
            "module.VPC.aws_vpc.wl5vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403878313:subnet/subnet-0574d576fc76f6202",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0574d576fc76f6202",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403878313",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_1"
            },
            "tags_all": {
              "Name": "private_subnet_1"
            },
            "vpc_id": "vpc-0d67bcdcf8bac5356"
          },
          "dependencies": [
            "module.VPC.aws_vpc.wl5vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403878313:subnet/subnet-062464eca15e177f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062464eca15e177f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403878313",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_2"
            },
            "tags_all": {
              "Name": "private_subnet_2"
            },
            "vpc_id": "vpc-0d67bcdcf8bac5356"
          },
          "dependencies": [
            "module.VPC.aws_vpc.wl5vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403878313:subnet/subnet-08fb03c46ee489c0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fb03c46ee489c0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "390403878313",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_1"
            },
            "tags_all": {
              "Name": "public_subnet_1"
            },
            "vpc_id": "vpc-0d67bcdcf8bac5356"
          },
          "dependencies": [
            "module.VPC.aws_vpc.wl5vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403878313:subnet/subnet-079c9817d113cc8da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079c9817d113cc8da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "390403878313",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_2"
            },
            "tags_all": {
              "Name": "public_subnet_2"
            },
            "vpc_id": "vpc-0d67bcdcf8bac5356"
          },
          "dependencies": [
            "module.VPC.aws_vpc.wl5vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wl5vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403878313:vpc/vpc-0d67bcdcf8bac5356",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00064823521670bdb",
            "default_route_table_id": "rtb-0d12a799d2c415285",
            "default_security_group_id": "sg-036e8fa2488fc3c25",
            "dhcp_options_id": "dopt-0d91c6b3c0dad562a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d67bcdcf8bac5356",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d12a799d2c415285",
            "owner_id": "390403878313"
          }
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "vpc_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-087845c954ab8c5fd",
            "peer_owner_id": "390403878313",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0d67bcdcf8bac5356",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "vpc_id": "vpc-0f41f2cc50b9d46d1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.wl5vpc",
            "module.VPC.data.aws_vpc.default_vpc"
          ]
        }
      ]
    }
  ]
}